css/style.css
/* ... */
.expeditionPreviewTitle {
  color: black;
  position: absolute;
  width: 190px;
  font-size: 0.9em;
  background: -webkit-linear-gradient(top, white, rgba(255, 255, 255, 0));
  background: -moz-linear-gradient(top, white, rgba(255, 255, 255, 0));
  background: -o-linear-gradient(top, white, rgba(255, 255, 255, 0));
  background: -ms-linear-gradient(top, white, rgba(255, 255, 255, 0));
  background: linear-gradient(top, white, rgba(255, 255, 255, 0));
  /*padding-bottom: 10px;*/
  /*padding-bottom: 120px;*/
}

.expeditionPreviewSummary {
  /*font-family: "Blokk";*/
  font-size: 0.7em;
  cursor: pointer;
  padding: 10px;
  padding-top: 30px;
}

.expedition-preview-image {
  margin-left: auto;
  margin-right: auto;
  display: block;
  margin-top: -2px;
  height: 100px;
  max-width: 185px;
}

.readMore {
  text-align: center;
  margin-top: -30px;
}

.readMore > span {
  color: rgba(240, 240, 240, 1);
  text-align: center;
  cursor: pointer;
  text-decoration: underline;
  background-color: black;
  padding: 4px 6px;
  border-radius: 5px;
  font-size: .8em;
  text-decoration: none;
}

.swiper-free-mode > .swiper-wrapper {
  /*width: 500px;*/
  margin: 0px !important;
}

.swiper-wrapper.scroll {
  height: 440px;
  overflow-y: scroll;
  overflow-x: hidden;
}

#expedition-logo {
  /*background-image: url(../images/icons/wikipedialogo.jpg);*/
  height: 40px;
  margin-top: 5px;
  /*background-size: 103px 34px;*/
  /*background-repeat: no-repeat;*/
  /*background-position: 10px 8px;*/
}

.expedition-logo-container {
  float: left;
}

#overview {
  float: left;
  /*margin-top: 26px;*/
  /*display: none;*/
}

#overview > a {
  color: #00adef;
  /*font-size: 0.8em;*/
  margin-left: 10px;
  text-decoration: none;
  display: none;
}

.expedition-title {
  margin-left: auto;
  margin-right: auto;
  width: 450px;
  text-align: center;
  opacity: 0;
  font-size: 20px;
  margin-top: 10px;
}

.expedition-title.active {
  opacity: 1;
}

.expedition-title.expedition {
  margin-top: 0px;
  font-size: 14px;
  opacity: 1;
}

.expedition-subtitle {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  width: 450px;
  opacity: 0;
  font-style: italic;
  font-size: 0px;
}

.expedition-subtitle.active {
  opacity: 1;
  font-size: 18px;
}

.menu-stack {
  float: right;
}

.map-controls {
  position: absolute;
  bottom: 10px;
  width: 110px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.map-control {
  display: inline-block;
  margin-left: 3px;
  cursor: pointer;
}

.map-control > img {
  width: 30px;
  height: 30px;
  stroke: white;
}

#mapDrawer {
  display: inline-block;
  cursor: crosshair;
  opacity: 0;
}

#btnMapDrawer {
  position: absolute;
  bottom: -100px;
  opacity: 0;
  display: none;
  /*cursor: not-allowed;*/

}

#btnMapDrawer.active {
  position: static;
  cursor: pointer;
  opacity: 1;
  display: inline;
}

.map-list {
  opacity: 0;
  z-index: -1;
  position: fixed;
  bottom: 50px;
  border-style: solid;
  max-height: 200px;
  padding: 3px;
  padding-left: 5px;
  padding-right: 5px;
  background-color: rgba(255, 255, 255, 0.7);
  border-color: rgba(255, 255, 255, .4);
  overflow-y: auto;

}

.map-list.active {
  opacity: 1;
  transition: opacity .3s;
  z-index: 2;
}

.spacer-left {
  position: absolute;
  width: 150px;
  display: inline;
  background-color: white;
  left: 0px;
  top: 0px;
  bottom: 0px;
  box-shadow: 10px 0px 10px 20px white;
  z-index: 2;
  opacity: inherit;
}


.spacer-left-content {
  width: 100%;
  text-align: center;
  margin-left: 5px;
  padding: 5px;
}

.spacer-left-title {
  font-size: 0.9em;
  font-weight: bold;
  margin-bottom: 10px;
}

.spacer-left-summary {
  font-size: 0.8em;
  font-style: italic;
}

.spacer-left.hidden {
  transform: translate3d(-1000px, 0px, 0px);
}

#previewSwiper {
  position: absolute;
  left: 175px;
  right: 80px;
  height: 100%;
}

#swiperMenu {
  opacity: 1;
  transition: opacity 0.4s 0.3s linear;
}

#swiperMenu.hidden {
  opacity: 0;
  transition: opacity 0.4s 0s linear;
  pointer-events: none;
}

#lstMap label > div {
  display: inline;
  margin: 10px;
}

#btnMenu {
  position: fixed;
  right: 22px;
  top: 15px;
  cursor: pointer;
}

#btnMenu > img {
  float: right;
  width: 30px;
  height: 30px;
}

#menuContainer.active {
  top: 55px;
}

.menu-item {
  width: 300px;
  background-color: gray;
  text-align: center;
  margin-bottom: 2px;
  color: white;
  text-transform: uppercase;
}

.menu-item:hover {
  background-color: #01aef0;
}

#menuContainer {
  position: fixed;
  top: -1000px;
  right: 10px;
  z-index: 3;
  cursor: pointer;
}

#menuContent {
  position: fixed;
  left: -1000px;
  opacity: 0;
}

.menu-content-item {
  padding: 50px;
}

#menuContent {
  padding: 10px;
}

#menuBlackout.active {
  position: absolute;
  z-index: 2;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  background-color: black;
  opacity: .7;
}


a.commons {
  color: white;
}

a.commons:visited {
  color: white;
}

.wiki-leesmeer {
  /*position: absolute;
  bottom: 60px;
  right: -200px;
  transition: transform .4s .1s;*/
/*  position: absolute;
  bottom: 20px;
  right: 10px;*/
  padding-right: 13px;
  background-image: url('http://bits.wikimedia.org/static/1.26wmf3/skins/Vector/images/external-link-ltr-icon.png?2015-04-22T18:40:00Z');
  background-position: center right;
  background-repeat: no-repeat;
}

.wiki-leesmeer a {
  /*color: #00adef;*/
  color: blue;
}

/*.wiki-leesmeer.active {
  transform: translate3d(-210px, 0px, 0px);
  transition: transform .2s .3s;
}*/

.spacer-right.active {
  transform: translate3d(-70px, 0px, 0px);
  transition: transform .2s .45s;
}

.spacer-right {
  position: absolute;
  opacity: inherit;
  width: 120px;
  display: inline;
  background-color: white;
  right: -70px;
  top: 0px;
  bottom: 0px;
  box-shadow: -10px 0px 10px 20px white;
  z-index: 2;
  /*transform: translate3d(70px, 0px, 0px);*/
  transition: transform .2s 0s;
}
/* ... */

